# ccolorizer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  a.out  build.sh  compile.sh  config.yaml  configure.sh  main.cc
.github/workflows/: cmake_build.yml
src/: main.cc
src/colorizer/: CMakeLists.txt  colorizer.cc  image.cc  image_loader.cc
src/colorizer/header/: colorizer.hh  image.hh  image_loader.hh  pixel.hh
